feat(skills): full authentic technical references generation using LLM multi-agents
- Removed all .ps1 and .py boilerplate generation scripts
- Deepened all remaining 39 frontend and backend skills with authentic code, architecture, and performance techniques
- Added 4 new critical categories: prompt-engineering, cloud-native, system-design, site-reliability-engineering
- Total skills increased to 454 with nearly 3500 reference files